# proto-plugin-test

./: CMakeLists.txt  FindProtobuf.cmake  README.md  test.proto
